# ai_context

./: README.md  README.ru.md  README.ua.md  manifests.yaml
.aictx/: .gitignore  IMPLEMENTATION.md  PLAN.md  README.md  SPEC.md  config.yaml  pyproject.toml
.aictx/src/aictx/: __init__.py  cli.py  config.py  document.py  indexer.py  manifest.py  plugins.py  validate.py
.aictx/src/aictx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
.aictx/src/aictx/adapters/: __init__.py  base.py  copilot.py  cursor.py
.aictx/state/: last_manifest.yaml
adapters/copilot/: README.md  context.json
adapters/cursor/: README.md  context.json
rules/: security.rule.md
shared/prompts/: implementation.prompt.md  review.prompt.md  tests-review.prompt.md
